[gd_scene load_steps=4 format=3 uid="uid://d22jjj1airefb"]

[ext_resource type="Script" path="res://Scripts/win_screen.gd" id="1_6cfmo"]
[ext_resource type="Texture2D" uid="uid://bfr45dbtk537i" path="res://Assets/Screen assets/Board icon.png" id="1_8yry8"]

[sub_resource type="Curve" id="Curve_kudbp"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.10989), 0.0, 0.0, 0, 0]
point_count = 2

[node name="win_screen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_6cfmo")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -435.5
offset_top = -280.0
offset_right = 435.5
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8yry8")

[node name="particles_left" type="CPUParticles2D" parent="."]
position = Vector2(-435, 0)
emitting = false
amount = 150
lifetime = 0.75
one_shot = true
explosiveness = 1.0
randomness = 0.63
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 150.0
initial_velocity_max = 500.0
angular_velocity_min = -280.68
angular_velocity_max = 170.85
scale_amount_min = 10.0
scale_amount_max = 30.0
scale_amount_curve = SubResource("Curve_kudbp")
color = Color(1, 0.843137, 0, 1)

[node name="particles_right" type="CPUParticles2D" parent="."]
position = Vector2(436, 0)
emitting = false
amount = 150
lifetime = 0.75
one_shot = true
explosiveness = 1.0
randomness = 0.63
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 150.0
initial_velocity_max = 500.0
angular_velocity_min = -280.68
angular_velocity_max = 170.85
scale_amount_min = 10.0
scale_amount_max = 30.0
scale_amount_curve = SubResource("Curve_kudbp")
color = Color(1, 0.843137, 0, 1)

[node name="restart" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -152.0
offset_top = 140.0
offset_right = 153.0
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "RESTART"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -144.0
offset_top = -196.0
offset_right = 140.0
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 40

[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
